added notebook and schema text

--- a/EmployeeSQL/Data_Explore.ipynb
+++ b/EmployeeSQL/Data_Explore.ipynb
@@ -89,34 +89,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "pandas.core.series.Series"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(csv_dict[\"dept_manager\"].duplicated(subset = 'dept_no'))"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "departments\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 9 entries, 0 to 8\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column     Non-Null Count  Dtype \n",
+      "---  ------     --------------  ----- \n",
+      " 0   dept_no    9 non-null      object\n",
+      " 1   dept_name  9 non-null      object\n",
+      "dtypes: object(2)\n",
+      "memory usage: 272.0+ bytes\n",
+      "None\n",
+      "dept_emp\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 331603 entries, 0 to 331602\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column   Non-Null Count   Dtype \n",
+      "---  ------   --------------   ----- \n",
+      " 0   emp_no   331603 non-null  int64 \n",
+      " 1   dept_no  331603 non-null  object\n",
+      "dtypes: int64(1), object(1)\n",
+      "memory usage: 5.1+ MB\n",
+      "None\n",
+      "dept_manager\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 24 entries, 0 to 23\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column   Non-Null Count  Dtype \n",
+      "---  ------   --------------  ----- \n",
+      " 0   dept_no  24 non-null     object\n",
+      " 1   emp_no   24 non-null     int64 \n",
+      "dtypes: int64(1), object(1)\n",
+      "memory usage: 512.0+ bytes\n",
+      "None\n",
+      "employees\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 300024 entries, 0 to 300023\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column        Non-Null Count   Dtype \n",
+      "---  ------        --------------   ----- \n",
+      " 0   emp_no        300024 non-null  int64 \n",
+      " 1   emp_title_id  300024 non-null  object\n",
+      " 2   birth_date    300024 non-null  object\n",
+      " 3   first_name    300024 non-null  object\n",
+      " 4   last_name     300024 non-null  object\n",
+      " 5   sex           300024 non-null  object\n",
+      " 6   hire_date     300024 non-null  object\n",
+      "dtypes: int64(1), object(6)\n",
+      "memory usage: 16.0+ MB\n",
+      "None\n",
+      "salaries\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 300024 entries, 0 to 300023\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column  Non-Null Count   Dtype\n",
+      "---  ------  --------------   -----\n",
+      " 0   emp_no  300024 non-null  int64\n",
+      " 1   salary  300024 non-null  int64\n",
+      "dtypes: int64(2)\n",
+      "memory usage: 4.6 MB\n",
+      "None\n",
+      "titles\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 7 entries, 0 to 6\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column    Non-Null Count  Dtype \n",
+      "---  ------    --------------  ----- \n",
+      " 0   title_id  7 non-null      object\n",
+      " 1   title     7 non-null      object\n",
+      "dtypes: object(2)\n",
+      "memory usage: 240.0+ bytes\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "# list columns per df\n",
     "for i in range(len(dfnames)):\n",
+    "    print(dfnames[i])\n",
     "    print(csv_dict[dfnames[i]].info())"
    ]
   },
@@ -173,6 +239,165 @@
     "-\n",
     "title_id PK string\n",
     "title UNIQUE string\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# cf https://www.educba.com/pandas-find-duplicates/ \n",
+    "#      retrieved 2021-02-21\n",
+    "\n",
+    "#Check that the PKs have no duplicates\n",
+    "#if PK has 0 duplicates, then all records are unique.\n",
+    "#    else, need to check table for uniqueness.\n",
+    "\n",
+    "#should return zero:\n",
+    "csv_dict[\"departments\"].duplicated(subset = 'dept_no').sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "31579"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Returns 31,579. \n",
+    "csv_dict[\"dept_emp\"].duplicated(subset = 'emp_no').sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#checking for any instances of record level duplicates\n",
+    "#should return zero.\n",
+    "csv_dict[\"dept_emp\"].duplicated().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Therefore need composite key for PK of dept_emp table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Returns zero\n",
+    "csv_dict[\"dept_manager\"].duplicated(subset = 'emp_no').sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "csv_dict[\"employees\"].duplicated(subset = 'emp_no').sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "csv_dict[\"salaries\"].duplicated(subset = 'emp_no').sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "csv_dict[\"titles\"].duplicated(subset = 'title_id').sum()"
    ]
   },
   {
